2008-05-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (init_treeview):
	* src/totem-playlist.h:
	* src/totem.c (on_playlist_change_name): Remove dead-code dating
	back from the audio CD support times

2008-05-24  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle): Check for the giosrc
	properly

2008-05-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require gmyth-upnp
	* src/plugins/mythtv/totem-mythtv.c (get_thumbnail),
	(totem_mythtv_list_recordings), (device_found_cb),
	(device_lost_cb), (totem_mythtv_update_binfo), (refresh_cb),
	(totem_mythtv_plugin_finalize): Patch by Renato Araujo Oliveira Filho
	<renatox@gmail.com> to use UPNP to discover GMyth servers, and avoid
	having any types of configuration to make (Closes: #516672)
	* src/plugins/mythtv/totem-mythtv.schemas.in: Remove

2008-05-23  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_launch_player), (totem_embedded_get_app_for_uri),
	(totem_embedded_update_menu), (on_open1_activate), (main):
	Use GIO and GDK to launch the full-blown player, startup notification
	only available with GTK+ 2.13 (Closes: #512587)
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle): Remove remains of gnome-vfs
	code, gvfs doesn't support passing credentials in the URI anyway
	* configure.in: Remove gnome-vfs deps, not used anymore

2008-05-23  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/publish/totem-publish.c:
	(totem_publish_plugin_stream_cb): Improve my fix for a signed/unsigned
	comparison warning.
	* src/plugins/youtube/youtube.py:
	* src/plugins/youtube/youtube.ui: Add a progress bar when doing
	YouTube searches to show the current status of the operation.
	(Closes: #522548)

2008-05-23  Kjartan Maraas  <kmaraas@gnome.org>

	* src/plugins/publish/publish-plugin.ui:
	Don't translate widget label.
